Replication Framework/services_creators/yamls-to-apply/adservice-apply/adservice-svc-7.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice-7
spec:
  ports:
  - name: grpc
    port: 30568
    targetPort: 30568
  selector:
    app: adservice-7
  type: ClusterIP
