Replication Framework/services_creators/yamls-to-apply/adservice-apply/adservice-svc-8.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice-7
spec:
  ports:
  - name: grpc
    port: 18563
    targetPort: 18563
  selector:
    app: adservice-7
  type: ClusterIP
