Replication Framework/services_creators/yamls-to-apply/adservice-apply/adservice-svc-9.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice-8
spec:
  ports:
  - name: grpc
    port: 22271
    targetPort: 22271
  selector:
    app: adservice-8
  type: ClusterIP
