Replication Framework/services_creators/yamls-to-apply/adservice-apply/adservice-netpol-10-frontend-10.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-0-allow-frontend-0
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-0
    ports:
    - port: 35423
  podSelector:
    matchLabels:
      app: adservice-0
