Replication Framework/services_creators/yamls-to-apply/adservice-apply/adservice-netpol-9-frontend-9.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-8-allow-frontend-8
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-8
    ports:
    - port: 22271
  podSelector:
    matchLabels:
      app: adservice-8
